Removed Scrollbar & Fixed Top Dropdown Navbar

--- a/client/src/Screens/components/tap/BottomNav/BottomNav.css
+++ b/client/src/Screens/components/tap/BottomNav/BottomNav.css
@@ -18,7 +18,7 @@
 .option{
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
     height: 100%;
     padding: 10px;
