--- a/client/src/index.css
+++ b/client/src/index.css
@@ -45,4 +45,7 @@ h4 {
   color: #fff;
   background: var(--purple);
 }
+::-webkit-scrollbar {
+  display: none;
+}
 /* ========= */
